FIX broken links and incorrect page names

--- a/docs/de-de/modules/artikel/pages/barcodes.adoc
+++ b/docs/de-de/modules/artikel/pages/barcodes.adoc
@@ -434,7 +434,7 @@ Dieser Hinweis gilt nur dann, wenn die Etiketten zu einem Auftrag erzeugt werden
 
 |Lagerort
 |
-. Gib X-Y-Koordinaten ein, um den xref:warenwirtschaft:wareneingaenge-verwalten.adoc#200[vorgeschlagenen Lagerort der Variante] auf dem Etikett anzuzeigen.
+. Gib X-Y-Koordinaten ein, um den xref:warenwirtschaft:variations-track-stock.adoc#300[vorgeschlagenen Lagerort der Variante] auf dem Etikett anzuzeigen.
 . xref:artikel:barcodes.adoc#980[Konfiguriere das Erscheinungsbild].
 
 |Bestand; +
