--- a/docs/de-de/modules/business-entscheidungen/pages/_aws-umzug.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/_aws-umzug.adoc
@@ -51,7 +51,7 @@ Bevor der Umzug gestartet werden kann, muss eine vollwertige Domain an das Syste
 
 ==== Plentymarkets als Domain-Provider
 
-Wie man eine neue Domain bestellt, die durch plentymarkets verwaltet werden soll kann man dem Handbuch entnehmen: Siehe  link:https://knowledge.plentymarkets.com/basics/arbeiten-mit-plentymarkets/plentymarkets-konto#_neue_domains_in_plentymarkets[Handbuch 4.2. ff.^]
+Wie man eine neue Domain bestellt, die durch plentymarkets verwaltet werden soll kann man dem Handbuch entnehmen: Siehe die Handbuchseite xref:business-entscheidungen:domains.adoc#[Domains].
 
 Anschließend muss die neue Domain in Deinem Service-Center als Hauptdomain festgelegt werden:
 [[styleguide-assets]]
@@ -60,7 +60,7 @@ image::business-entscheidungen:awstransfer_pic003.png[]
 
 === Externer Domain-Provider
 
-Wie eine externe Domain zu Deinem System hinzugefügt werden kann findest Du in unserem Handbuch. Siehe link:https://knowledge.plentymarkets.com/basics/arbeiten-mit-plentymarkets/plentymarkets-konto#_neue_externe_domain_anlegen[Handbuch 4.2.3.^]
+Wie eine externe Domain zu Deinem System hinzugefügt werden kann findest Du in unserem Handbuch. Siehe die Handbuchseite xref:business-entscheidungen:domains.adoc#[Domains].
 
 Nach dem Anlegen der neuen, externen Domain müssen unbedingt die DNS-Einstellungen bei Deinem externen Domain-Provider angepasst werden, damit Dein Shop über die neue Domain erreichbar ist.
 
