--- a/docs/de-de/modules/changelog/pages/2021-07-08.adoc
+++ b/docs/de-de/modules/changelog/pages/2021-07-08.adoc
@@ -39,7 +39,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *stable* veröffentlicht.
 [discrete]
 === Kaufland.de
 
-* Durch das sogenannte Mehrwertsteuer-Digitalpaket, das am 01.07.2021 in Kraft tritt, ändern sich auch Regelungen zur Umsatzsteuer in EU-Ländern. Kaufland.de reagiert darauf mit dem link:https://knowledge.plentymarkets.com/maerkte/kaufland-de/kaufland-de-einrichten#225[Modell Fiktiver Lieferer^]. Durch die Gesetzesänderungen wird Kaufland.de zum fiktiven Lieferer und wird dadurch teilweise umsatzsteuerpflichtig. Das Modell basiert auf dem Standort des Firmensitzes, dem Standort von Lagern und dem Wert der Lieferung.
+* Durch das sogenannte Mehrwertsteuer-Digitalpaket, das am 01.07.2021 in Kraft tritt, ändern sich auch Regelungen zur Umsatzsteuer in EU-Ländern. Kaufland.de reagiert darauf mit dem xref:maerkte:kaufland-de-einrichten.adoc#225[Modell Fiktiver Lieferer]. Durch die Gesetzesänderungen wird Kaufland.de zum fiktiven Lieferer und wird dadurch teilweise umsatzsteuerpflichtig. Das Modell basiert auf dem Standort des Firmensitzes, dem Standort von Lagern und dem Wert der Lieferung.
 +
 [IMPORTANT]
 .To-Do
