--- a/docs/de-de/modules/changelog/pages/2021-12-22.adoc
+++ b/docs/de-de/modules/changelog/pages/2021-12-22.adoc
@@ -66,7 +66,7 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *stable* veröffentlicht.
 
 * Wie wir bereits angekündigt haben, gibt es ein neues Pflichtattribut *Elektroprodukt* bei Netto. Um den Händlern, welche keine betroffenen Produkte verkaufen, zu entlasten, wird als Standardwert für dieses Attribut *nein* exportiert, wenn kein Merkmal dafür am Artikel hinterlegt wurde.
 
-Wer das Merkmal noch pflegen muss, findet hier einen Leitfaden: link:https://knowledge.plentymarkets.com/maerkte/plus-gartenxxl#merkmal-elektroprodukt[Link zum Handbuch^].
+Wer das Merkmal noch pflegen muss, findet hier einen Leitfaden: xref:maerkte:plus-gartenxxl#merkmal-elektroprodukt[Link zum Handbuch].
 
 [discrete]
 === Payment
@@ -145,7 +145,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *early* veröffentlicht.
 [discrete]
 === Kataloge
 
-* Die mathematischen Berechnungen in einigen Standardformaten des Katalogs wurden erweitert. Dort kannst du nun auch Zuweisungen für die Datenfelder vornehmen. So kannst du z.B. wählen, welche Sprache exportiert werden soll. Ob für ein Datenfeld Zuweisungen erforderlich ist, erkennst du an den drei Punkten. Eine Zahl zeigt an, wie viele Zuweisungen vorgenommen werden müssen. Mehr erfährst du im link:https://knowledge.plentymarkets.com/daten/daten-exportieren/kataloge-verwalten#mathematische-berechnungen[plentymarkets Handbuch^].
+* Die mathematischen Berechnungen in einigen Standardformaten des Katalogs wurden erweitert. Dort kannst du nun auch Zuweisungen für die Datenfelder vornehmen. So kannst du z.B. wählen, welche Sprache exportiert werden soll. Ob für ein Datenfeld Zuweisungen erforderlich ist, erkennst du an den drei Punkten. Eine Zahl zeigt an, wie viele Zuweisungen vorgenommen werden müssen. Mehr erfährst du im xref:daten:standardformate-exportieren.adoc#optional-recalculate[plentymarkets Handbuch].
 
 [discrete]
 == Behoben
