--- a/docs/de-de/modules/changelog/pages/2021-12-29.adoc
+++ b/docs/de-de/modules/changelog/pages/2021-12-29.adoc
@@ -41,7 +41,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *stable* veröffentlicht.
 [discrete]
 === Kataloge
 
-* Die mathematischen Berechnungen in einigen Standardformaten des Katalogs wurden erweitert. Dort kannst du nun auch Zuweisungen für die Datenfelder vornehmen. So kannst du z.B. wählen, welche Sprache exportiert werden soll. Ob für ein Datenfeld Zuweisungen erforderlich ist, erkennst du an den drei Punkten. Eine Zahl zeigt an, wie viele Zuweisungen vorgenommen werden müssen. Mehr erfährst du im link:https://knowledge.plentymarkets.com/daten/daten-exportieren/kataloge-verwalten#mathematische-berechnungen[plentymarkets Handbuch^].
+* Die mathematischen Berechnungen in einigen Standardformaten des Katalogs wurden erweitert. Dort kannst du nun auch Zuweisungen für die Datenfelder vornehmen. So kannst du z.B. wählen, welche Sprache exportiert werden soll. Ob für ein Datenfeld Zuweisungen erforderlich ist, erkennst du an den drei Punkten. Eine Zahl zeigt an, wie viele Zuweisungen vorgenommen werden müssen. Mehr erfährst du im xref:daten:standardformate-exportieren.adoc#optional-recalculate[plentymarkets Handbuch].
 
 '''
 
