--- a/docs/de-de/modules/changelog/pages/2022-02-16.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-02-16.adoc
@@ -8,7 +8,7 @@
 
 // Ab dem Eintrag weitermachen: https://forum.plentymarkets.com/t/abonnement-uebersicht-tabelle-auf-volle-bildschirmhoehe-erweitert-subscription-overview-table-extended-to-full-screen-height/670388
 
-// Diese Einträge für early im kommenden Changelog berücksichtigen: 
+// Diese Einträge für early im kommenden Changelog berücksichtigen:
 // https://forum.plentymarkets.com/t/neue-auftragsrelation-fuer-varianten-properties-v2-new-order-relation-for-variation-properties-v2/669631
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
@@ -41,7 +41,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *stable* veröffentlicht.
 [discrete]
 === Kataloge
 
-* In den Exporteinstellungen der Kataloge findest du ab sofort die Schaltfläche *Verbindung testen*. Damit kannst du testen, ob mit den eingegebenen Servereinstellungen eine Exportdatei gespeichert werden kann. Dabei wird getestet, ob ein Dateiexport möglich ist. Es wird nicht geprüft, ob eine Verbindung zu einem Marktplatz hergestellt werden kann. Neugierig? link:https://knowledge.plentymarkets.com/daten/daten-exportieren/dateiexport#export-settings[Im Handbuch^] erfährst du mehr.
+* In den Exporteinstellungen der Kataloge findest du ab sofort die Schaltfläche *Verbindung testen*. Damit kannst du testen, ob mit den eingegebenen Servereinstellungen eine Exportdatei gespeichert werden kann. Dabei wird getestet, ob ein Dateiexport möglich ist. Es wird nicht geprüft, ob eine Verbindung zu einem Marktplatz hergestellt werden kann. Neugierig? xref:daten:standardformate-exportieren.adoc#export-settings[Im Handbuch] erfährst du mehr.
 
 [discrete]
 === OTTO
