--- a/docs/de-de/modules/changelog/pages/2022-03-30.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-03-30.adoc
@@ -39,7 +39,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *stable* veröffentlicht.
 
 * Wie bereits in link:https://forum.plentymarkets.com/t/ankuendigung-release-der-neuen-kontakt-ui-announcement-release-of-the-new-contact-ui/673537[diesem Beitrag] angekündigt, steht dir ab sofort die neue Kontakte-UI basierend auf MyView im Menü *CRM » Kontakte (Testphase)* zur Verfügung.
 In dem oben verlinkten Beitrag findest du neben den nächsten geplanten Schritten für die Kontakte-UI ein kurzes informatives Video, in dem wir dir die neue Kontakte-UI vorstellen.
-Detaillierte Informationen findest du in unserem link:https://knowledge.plentymarkets.com/crm/kontakte[Handbuch].
+Detaillierte Informationen findest du in unserem xref:crm:kontakte.adoc#[Handbuch].
 
 '''
 
