--- a/docs/de-de/modules/fulfillment/pages/praxisbeispiel-dhl.adoc
+++ b/docs/de-de/modules/fulfillment/pages/praxisbeispiel-dhl.adoc
@@ -112,7 +112,8 @@ Im Tab *Base* legst du die grundsätzlichen Einstellungen für dein Versandprofi
 |Die Priorität bestimmt die Reihenfolge der im Webshop angezeigten Versandprofile.
 
 |Kategorie
-|Die Kategorieoption ermöglicht eine zusätzliche Priorisierung der Versandprofile. Ein konkretes Anwendungsbeispiel findest du link:https://knowledge.plentymarkets.com/fulfillment/versand-vorbereiten#1300[hier].
+|Die Kategorieoption ermöglicht eine zusätzliche Priorisierung der Versandprofile.
+Ein konkretes Anwendungsbeispiel findest du xref:fulfillment:versand-vorbereiten.adoc#1300[hier].
 
 |Artikel Portoaufschlag
 |Hiermit kannst du am Artikel hinterlegte Portoaufschläge aktivieren.
