--- a/docs/de-de/modules/maerkte/pages/neckermann-at-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/neckermann-at-einrichten.adoc
@@ -143,7 +143,7 @@ a| * *Nein* = Die ID wird standardmäßig nicht übertragen. +
 
 | *Bestandspuffer*
 |Der übertragene Bestand von Artikeln wird um den eingegebenen Wert reduziert, damit der Arikel auf diesem Marktplatz nicht vollständig abverkauft wird. +
-*_Beispiel:_* Für einen Artikel mit einem Bestand von 50 und einem Bestandspuffer von 10 wird der Bestandswert 40 übertragen. Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Warenbestände verwalten].
+*_Beispiel:_* Für einen Artikel mit einem Bestand von 50 und einem Bestandspuffer von 10 wird der Bestandswert 40 übertragen. Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Bestand überwachen].
 
 | *Lieferzeiten*
 a| * *Standardlieferzeiten* = Lieferzeit in Tagen eingeben. Diese Lieferzeit ist die Standardlieferzeit, die du für die meisten deiner Sendungen benötigst. +
