--- a/docs/de-de/modules/warenwirtschaft/pages/nachbestellungen-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/nachbestellungen-vornehmen.adoc
@@ -864,7 +864,7 @@ Im Feld *Einkaufspreis* kannst du den voreingetragenen Einkaufspreis ändern ode
 .Einkaufspreis für Varianten bearbeiten
 ====
 Das Bearbeiten des Einkaufspreises kann Auswirkungen auf deine im System gespeicherten Preise haben.
-Ist im Menü *Einrichtung » Waren » Warenbestand » Wareneingang* für den *Einkaufspreis* eine der Optionen *Einkaufspreis auf Variante übertragen* oder *Einkaufspreis auf Variante und Lieferant übertragen* aktiviert, wird der an der Variante hinterlegte Einkaufspreis durch deine Eingabe während der Nachbestellung überschrieben. Genauere Informationen dazu findest du auf der Handbuchseite xref:warenwirtschaft:wareneingaenge-verwalten.adoc#300[Wareneingänge verwalten].
+Ist im Menü *Einrichtung » Waren » Warenbestand » Wareneingang* für den *Einkaufspreis* eine der Optionen *Einkaufspreis auf Variante übertragen* oder *Einkaufspreis auf Variante und Lieferant übertragen* aktiviert, wird der an der Variante hinterlegte Einkaufspreis durch deine Eingabe während der Nachbestellung überschrieben. Genauere Informationen dazu findest du auf der Handbuchseite xref:warenwirtschaft:wareneingaenge-verwalten.adoc#300[Ware einbuchen].
 ====
 
 Hast du alle notwendigen Änderungen an den Auftragspositionen vorgenommen, klicke im Bereich *Warenkorb* auf *Speichern* (icon:save[role="green"]).
