--- a/docs/de-de/modules/warenwirtschaft/pages/waren-ausbuchen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/waren-ausbuchen.adoc
@@ -157,7 +157,7 @@ Zuletzt noch einige Hinweise zu den Sonderfällen **Stornierungen**, **Retouren*
 === Stornierungen
 
 Wird ein Auftrag vor dem Warenausgang widerrufen, setze diesen manuell auf den Status 8 – **Storniert**. Wenn ein Auftrag storniert wird, werden die reservierten Warenbestände wieder freigegeben. Ein Auftrag kann nur so lange storniert werden, wie kein Warenausgang gebucht wurde.  +
-Was reservierter Bestand ist und wann dein System Bestand reserviert, erfährst du unter **xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Warenbestände verwalten]**.
+Was reservierter Bestand ist und wann dein System Bestand reserviert, erfährst du unter xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Bestand überwachen].
 
 [#70]
 === Retouren
