--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -3,7 +3,6 @@
 :description: Du hast gerade eben Waren von deinem Lieferanten erhalten. Was nun? Auf dieser Seite lernst du, wie du den Bestand in plentymarkets einbuchen kannst.
 :id: D1FCJJV
 :author: team-stock
-:stem: latexmath
 
 Es gibt verschiedene Wege, über die du Waren in dein System buchen kannst.
 Voraussetzung für einen Wareneingang ist, dass der Variante ein Lager, ein Lagerort und ein:e Lieferant:in zugeordnet sind.
@@ -259,7 +258,9 @@ Wenn du erneut eine Menge der gleichen Variante hinzufügst und der Einkaufsprei
 [#810]
 === Wareneingang mit MHD und/oder Charge buchen
 
-Du kannst Varianten mit Mindesthaltbarkeitsdatum (MHD) und/oder Chargeninformationen einbuchen. Dafür muss an der Variante im Tab *Lager* für das Lager die Option *MHD* und/oder *Charge* aktiviert sein. Die Einstellungen findest du im Kapitel xref:warenwirtschaft:wareneingaenge-verwalten.adoc#200[Variante mit Lagerort verknüpfen].
+Du kannst Varianten mit Mindesthaltbarkeitsdatum (MHD) und/oder Chargeninformationen einbuchen.
+Dafür muss an der Variante im Tab *Lager* für das Lager die Option *MHD* und/oder *Charge* aktiviert sein.
+xref:warenwirtschaft:variations-track-stock.adoc#300[Weitere Informationen zur Einstellung findest du hier].
 
 [IMPORTANT]
 .Variante mit MHD und Charge einbuchen
