--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-warenwirtschaft.adoc
@@ -36,7 +36,7 @@ include::warenwirtschaft:page$suppliers.adoc[tag=create-supplier-contact]
 [#300]
 == Mehr zum Thema Lager und Lieferanten
 
-* xref:warenwirtschaft:lager-einrichten.adoc#[Lager einrichten]
+* xref:warenwirtschaft:lager-einrichten.adoc#[Lager planen]
 * xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen].
 
 TIP: Weiter zum Thema xref:willkommen:schnelleinstieg-webshop-einleitung.adoc#[Webshop einrichten: Einleitung]
