--- a/docs/de-de/modules/changelog/pages/2022-02-23.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-02-23.adoc
@@ -50,7 +50,7 @@ Weitere Informationen dazu findest du in link:https://forum.plentymarkets.com/t/
 
 ** Beim Wechsel solltest du deinen alten Elastischen Export exakt in dem neuen Katalog nachbauen, damit der Artikelexport weiterhin funktioniert. Ordne also alle Datenfelder so zu, wie sie auch im Elastischen Export an den Marktplatz übertragen wurden. Wenn du bestimmte Datenfelder anders als bisher zuordnest, werden möglicherweise beim Export neue Artikel erstellt.
 
-** Wie du einen Katalog für MyBestBrands einrichtest, erfährst du im link:https://knowledge.plentymarkets.com/maerkte/preisportale/mybestbrands[plentymarkets Handbuch^]
+** Wie du einen Katalog für MyBestBrands einrichtest, erfährst du im xref:maerkte:mybestbrands.adoc#[plentymarkets Handbuch]
 
 * *_Hinweis:_* Der Elastische Export und die Exportformate werden nicht mehr weiterentwickelt. Wir empfehlen dir deshalb, schon jetzt Kataloge zu erstellen.
 
