--- a/docs/de-de/modules/changelog/pages/2022-03-23.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-03-23.adoc
@@ -133,7 +133,7 @@ Der Fehler wurde nun behoben.
 ** Wenn im plentymarkets System die Versandbestätigung an Amazon ausschließlich im Konto mit der ID 0 aktiv ist.
 * *To-Do*: Wenn ihr diese Einstellung in eurem System verwendet, müsst ihr die Versandbestätigungen für den heutigen Tag bis zur finalen Veröffentlichung des Fixes noch einmal zurücksetzen/neu anstoßen.
 Ihr könnt dies unter *Einrichtung » Märkte » Amazon » Datenaustausch » Versandbestätigung* tun. +
-link:https://knowledge.plentymarkets.com/maerkte/amazon/amazon-einrichten#2360[Hier] findest du den Handbucheintrag zu dieser Funktion.
+xref:maerkte:amazon-einrichten.adoc#[Hier] findest du den Handbucheintrag zu dieser Funktion.
 
 [discrete]
 === Blog - Editor
@@ -196,7 +196,7 @@ Folgende Neuerungen wurden in den letzten 7 Tagen auf *early* veröffentlicht.
 
 * Wie bereits in link:https://forum.plentymarkets.com/t/ankuendigung-release-der-neuen-kontakt-ui-announcement-release-of-the-new-contact-ui/673537[diesem Beitrag] angekündigt, steht dir ab sofort die neue Kontakte-UI basierend auf MyView im Menü *CRM » Kontakte (Testphase)* zur Verfügung.
 In dem oben verlinkten Beitrag findest du neben den nächsten geplanten Schritten für die Kontakte-UI ein kurzes informatives Video, in dem wir dir die neue Kontakte-UI vorstellen.
-Detaillierte Informationen findest du in unserem link:https://knowledge.plentymarkets.com/crm/kontakte[Handbuch].
+Detaillierte Informationen findest du in unserem xref:crm:kontakte.adoc#[Handbuch].
 
 [discrete]
 === Neue Artikel-UI
