--- a/docs/de-de/modules/daten/pages/backup.adoc
+++ b/docs/de-de/modules/daten/pages/backup.adoc
@@ -104,7 +104,7 @@ xref:automatisierung:prozesse-einrichten.adoc#220[Systemspezifische Einstellunge
 
 | **Warehouse**
 |Stellt Lager und den Lageraufbau, wie z.B. Dimensionen und Lagerorte, wieder her. +
-Beinhaltet nicht den Warenbestand. Jedoch kann der link:https://knowledge.plentymarkets.com/warenwirtschaft/praxisbeispiel-warenbestand-sichern[Warenbestand täglich gesichert] und somit ein Backup erstellt werden.
+Beinhaltet nicht den Warenbestand. Jedoch kann der xref:warenwirtschaft:praxisbeispiel-warenbestand-sichern.adoc#[Warenbestand täglich gesichert] und somit ein Backup erstellt werden.
 
 | **FacetDefinition**
 |Stellt die Facetten, Werte und Einstellungen im Menü *Einrichtung » Mandant » Global » Dienste » Facettensuche* wieder her.
