--- a/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-vorbereiten.adoc
@@ -1327,7 +1327,7 @@ Gehe wie im Folgenden beschrieben vor, um die Schnittstelle zu DHL Retoure Onlin
 
 Du benötigst ein Lager, um die Informationen, die du von DHL für Retouren erhältst, zu speichern. In plentymarkets gibt es verschiedenen Lagertypen. Für Retouren eignet sich insbesondere der Lagertyp *Reparatur*. Das Reparaturlager kann dann über die Einstellung *Zugeordnetes Reparaturlager* im Menü *Einrichtung » Waren » Lager » [Lager wählen] » Einstellungen* einem Hauptlager vom Typ *Vertrieb* zugeordnet werden. Wenn später ein Retourenetikett erzeugt wird, wird anhand des Lagers des Auftrags das zugehörige Vertriebs- oder Reparaturlager verwendet.
 
-Wenn du noch kein Lager erstellt hast, erstelle zunächst ein Lager oder ein Vertriebs- und Reparaturlager im Menü *Einrichtung » Waren » Lager*. Wie du ein Lager erstellst, ist auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#[Lager einrichten] beschrieben.
+Wenn du noch kein Lager erstellt hast, erstelle zunächst ein Lager oder ein Vertriebs- und Reparaturlager im Menü *Einrichtung » Waren » Lager*. Wie du ein Lager erstellst, ist auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#[Lager planen] beschrieben.
 
 [IMPORTANT]
 .Verfügbare Lagertypen für DHL Online Retoure
@@ -2404,7 +2404,7 @@ Im Menü *Einrichtung » Aufträge » Versand » Optionen* im Tab *Versandprofil
 [#4900]
 ==== Lager erstellen
 
-Erstelle zunächst im Menü *Einrichtung » Waren » Lager* die Lager für die von DHL Fulfillment verwalteten Artikel. Wähle bei allen Lagern den *Logistiktyp* DHL Fulfillment. Wähle diese Lager dann auch als Hauptlager für die von DHL Fulfillment verwalteten Artikel. Öffne dazu den Artikel im Menü *Artikel » Artikel bearbeiten* und wähle das Hauptlager im Bereich *Versand*. Weitere Informationen zum Erstellen von Lagern findest du auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#[Lager einrichten].
+Erstelle zunächst im Menü *Einrichtung » Waren » Lager* die Lager für die von DHL Fulfillment verwalteten Artikel. Wähle bei allen Lagern den *Logistiktyp* DHL Fulfillment. Wähle diese Lager dann auch als Hauptlager für die von DHL Fulfillment verwalteten Artikel. Öffne dazu den Artikel im Menü *Artikel » Artikel bearbeiten* und wähle das Hauptlager im Bereich *Versand*. Weitere Informationen zum Erstellen von Lagern findest du auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#[Lager planen].
 
 Erstelle für die Einrichtung von DHL Fulfillment die folgenden Lagertypen:
 
@@ -2458,7 +2458,7 @@ Folgende Bestandstypen werden von DHL Fulfillment verwendet:
 
 Beschädigte Waren können Retouren sein, aber auch Artikel, die z.B. bei der Bewegung im Lager beschädigt werden oder beschädigt geliefert wurden.
 
-Wenn du für deine Artikel eine Nachbestellung im Menü *Waren » Bestellwesen » Nachbestellungen* anlegst, stelle sicher, dass sich die Nachbestellung in *Status [2] Bestätigt* befindet. Nur wenn sich die Nachbestellung in diesem Status befindet, wird die Nachbestellung an DHL Fulfillment übertragen. Weitere Informationen zu Nachbestellungen findest du auf der Handbuchseite xref:warenwirtschaft:nachbestellungen-verwalten.adoc#[Nachbestellungen verwalten].
+Wenn du für deine Artikel eine Nachbestellung im Menü *Waren » Bestellwesen » Nachbestellungen* anlegst, stelle sicher, dass sich die Nachbestellung in *Status [2] Bestätigt* befindet. Nur wenn sich die Nachbestellung in diesem Status befindet, wird die Nachbestellung an DHL Fulfillment übertragen. Weitere Informationen zu Nachbestellungen findest du auf der Handbuchseite xref:warenwirtschaft:nachbestellungen-verwalten.adoc#[Nachbestellungen].
 
 Beachte, dass dein plentymarkets System Anpassungen am Artikelbestand nur übernehmen kann, wenn die Artikeldaten über plentymarkets an DHL Fulfillment übertragen wurden. Wichtig ist, dass DHL Fulfillment die Artikel bestätigt, damit diese Artikel berücksichtigt werden können.
 
