--- a/docs/de-de/modules/glossar/partials/bestandspuffer.adoc
+++ b/docs/de-de/modules/glossar/partials/bestandspuffer.adoc
@@ -1,3 +1,3 @@
 [#bestandspuffer]
 Bestandspuffer:: Bewirkt, dass der Bestand auf einem Marktplatz um den eingetragenen Wert reduziert und der Artikel somit nicht vollständig über den Marktplatz verkauft wird. +
-* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:wareneingaenge-verwalten.adoc#200[Wareneingänge verwalten].
+* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:variations-track-stock.adoc#300[Varianten: Bestandsführung ermöglichen].
