--- a/docs/de-de/modules/glossar/partials/mhd.adoc
+++ b/docs/de-de/modules/glossar/partials/mhd.adoc
@@ -1,3 +1,3 @@
 [#mhd]
 MHD:: Das Mindesthaltbarkeitsdatum (MHD) kann für Varianten angegeben werden, die nur bis zu einem bestimmten Zeitpunkt haltbar sind. +
-* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:mhd-charge-verwalten.adoc#[MHD/Charge verwalten].
+* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:mhd-charge-verwalten.adoc#[Artikel mit MHD/Charge].
