--- a/docs/de-de/modules/glossar/partials/physischer-warenbestand.adoc
+++ b/docs/de-de/modules/glossar/partials/physischer-warenbestand.adoc
@@ -1,3 +1,3 @@
 [#physischer-warenbestand]
 Physischer Warenbestand:: Menge der Artikel, die sich tatsächlich in einem Lager befindet. +
-* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#100[Warenbestände verwalten].
+* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#100[Bestand überwachen].
