--- a/docs/de-de/modules/glossar/partials/warenbestand.adoc
+++ b/docs/de-de/modules/glossar/partials/warenbestand.adoc
@@ -1,3 +1,3 @@
 [#warenbestand]
 Warenbestand:: Menge der Ware, die aktuell im Lager vorhanden ist. +
-* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Warenbestände verwalten].
+* Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:warenbestaende-verwalten.adoc#[Bestand überwachen].
