--- a/docs/de-de/modules/warenwirtschaft/pages/inventur-durchfuehren.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/inventur-durchfuehren.adoc
@@ -14,7 +14,7 @@ Für Inventuren, die mit plentyWarehouse durchgeführt wurden, können außerdem
 .Labels für Lagerorte verwenden
 ====
 Für die Durchführung einer Inventur in plentyWarehouse ist es erforderlich, dass du pro Lagerort ein Label erstellt und am passenden Lagerort angebracht hast. Während der Inventur scannst du den Barcode auf dem Label mit deinem Gerät, um so die passenden Lagerorte für die Inventur auszuwählen.
-Du hast noch keine Labels für Lagerorte erstellt? Die passende Anleitung findest du auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#800[Lager einrichten].
+Du hast noch keine Labels für Lagerorte erstellt? Die passende Anleitung findest du auf der Handbuchseite xref:warenwirtschaft:lager-einrichten.adoc#800[Lager planen].
 ====
 
 [#100]
@@ -220,11 +220,11 @@ Zählprotokoll exportieren:
 |Wähle ein Enddatum für den Zeitraum aus, in dem die Inventur stattgefunden hat, zu der du ein Zählprotokoll exportieren möchtest.
 
 | *Sortieren nach*
-|Wie sollen die Einträge im Zählprotokoll-Export sortiert werden? Wähle eine der Optionen *Lagerort*, *Datum* oder *Benutzer*, um die Einträge entsprechend zu sortieren. 
+|Wie sollen die Einträge im Zählprotokoll-Export sortiert werden? Wähle eine der Optionen *Lagerort*, *Datum* oder *Benutzer*, um die Einträge entsprechend zu sortieren.
 
 | *Einkaufspreise ausgeben*
 |Sollen die Einkaufspreise der gezählten Varianten im Zählprotokoll-Export mit ausgegeben werden? +
-*Aktiviert* (icon:toggle-on[role="green"]) = Der Export wird um zwei Spalten erweitert, die jeweils den Einkaufspreis und den gleitenden Durchschnitss-Einkaufspreis der Variante beinhalten. Hintergrundinformationen zu diesen zwei Arten von Einkaufspreisen findest du auf der Handbuchseite xref:warenwirtschaft:wareneingaenge-verwalten.adoc#250[Wareneingänge verwalten]. +
+*Aktiviert* (icon:toggle-on[role="green"]) = Der Export wird um zwei Spalten erweitert, die jeweils den Einkaufspreis und den gleitenden Durchschnitss-Einkaufspreis der Variante beinhalten. Hintergrundinformationen zu diesen zwei Arten von Einkaufspreisen findest du auf der Handbuchseite xref:warenwirtschaft:wareneingaenge-verwalten.adoc#250[Ware einbuchen]. +
 *Deaktiviert* (icon:toggle-off[role="darkGrey"]) = Die Einkaufspreise der Varianten werden im Export nicht mit ausgegeben.
 
 | *Nur aktuellste Zählergebnisse berücksichtigen*
@@ -242,13 +242,13 @@ Das Zählprotokoll kannst du in den Formaten CSV und PDF herunterladen. Entschei
 
 [tabs]
 ====
-CSV-Datei:: 
+CSV-Datei::
 +
 --
 * Die CSV-Datei lässt sich nachträglich bearbeiten. Sie bietet sich an, falls du die Datei manuell mit weiteren Informationen anreichern möchtest. Auch wenn du die Daten in ein weiteres Buchhaltungs-Tool oder sonstige Software importieren möchtest, solltest du dieses Format wählen.
 --
 
-PDF-Datei:: 
+PDF-Datei::
 +
 --
 * Die PDF-Datei ist nicht ohne Weiteres anpassbar. Sie dient daher als Beleg, den du als Nachweis für deine:n Steuerberater:in und deine eigene Buchführung aufbewahrst.
