--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-letzte-schritte.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-letzte-schritte.adoc
@@ -14,15 +14,15 @@ Hast du ...
 
 [%interactive]
 
-* [ ] die link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-basiseinstellungen[Basiseinstellungen^] vorgenommen?
-* [ ] link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-warenwirtschaft[Lager und Lieferant^] eingerichtet?
-* [ ] die link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-versandoptionen[Versandoptionen^] eingerichtet?
-* [ ] deinen link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-artikelkatalog[Artikelkatalog^] aufgebaut?
-* [ ] den link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-warenbestand[Warenbestand^] gebucht?
-* [ ] deinen link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-webshop[Webshop^] gestaltet?
-* [ ] die link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-zahlungsabwicklung[Zahlungsabwicklung^] eingerichtet?
-* [ ] die link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-auftragsabwicklung[Auftragsabwicklung^] vorbereitet?
-* [ ] Einstellungen zur link:https://knowledge.plentymarkets.com/willkommen/schnelleinstieg/schnelleinstieg-automatisierung[Automatisierung^] vorgenommen?
+* [ ] die xref:willkommen:schnelleinstieg-basiseinstellungen.adoc#[Basiseinstellungen] vorgenommen?
+* [ ] xref:willkommen:schnelleinstieg-warenwirtschaft.adoc#[Lager und Lieferanten] eingerichtet?
+* [ ] die xref:willkommen:schnelleinstieg-versandoptionen.adoc#[Versandoptionen] eingerichtet?
+* [ ] dein xref:willkommen:schnelleinstieg-artikelkatalog.adoc#[Produktsortiment] aufgebaut?
+* [ ] den xref:willkommen:schnelleinstieg-warenbestand.adoc#[Warenbestand] gebucht?
+* [ ] deinen xref:willkommen:schnelleinstieg-webshop.adoc#[Webshop] gestaltet?
+* [ ] die xref:willkommen:schnelleinstieg-zahlungsabwicklung.adoc#[Zahlungsabwicklung] eingerichtet?
+* [ ] die xref:willkommen:schnelleinstieg-auftragsabwicklung.adoc#[Auftragsabwicklung] vorbereitet?
+* [ ] Einstellungen zur xref:willkommen:schnelleinstieg-automatisierung.adoc#[Automatisierung] vorgenommen?
 
 [#20]
 == Shop live schalten
@@ -87,7 +87,7 @@ Wenn du dein System auf eine andere Version umstellen möchtest, findest du Info
 * Wenn du dein System und deinen Webshop um weitere Funktionen erweitern möchtest, findest du im link:https://marketplace.plentymarkets.com/[plentyMarketplace^] weitere Plugins.
 * Neuigkeiten und Ankündigungen rund um plentymarkets findest du in unserem link:https://www.plentymarkets.eu/blog[Blog^].
 * Hilfe, Tipps und Tricks erhältst du von unseren Supportern im plentymarkets link:https://forum.plentymarkets.com/[Forum^].
-* Unsere link:https://knowledge.plentymarkets.com/videos[Videotutorials^] bieten dir weitere nützliche Anleitungen.
+* Unsere xref:videos:videos.adoc#[Videotutorials] bieten dir weitere nützliche Anleitungen.
 * Wenn du möchtest, dass dir unsere Einrichter mit Rat und Tat zur Seite stehen, kannst du link:https://www.plentymarkets.com/de/wissen/hilfecenter/[hier^] einen Termin vereinbaren.
 * Professionelle Unterstützung bei der Gestaltung deines Webshops erhältst du bei unseren link:https://marketplace.plentymarkets.com/partners[Partneragenturen^].
 * Folge uns auf link:https://www.facebook.com/plentymarkets[Facebook^] und link:https://www.twitter.com/plentymarkets[Twitter^].
