--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -622,19 +622,21 @@ include::partial$checklist-variations.adoc[tag=checklist-check-log]
 include::partial$catalogue-activation.adoc[]
 
 [#katalog-vorschau]
-=== Vorschau des Katalogs herunterladen
+[.collapseBox]
+.Vorschau des Katalogs anzeigen
+--
 
-Nachdem du einen Katalog zum ersten Mal exportiert hast, kannst du eine Vorschau des Katalogs herunterladen. Die Vorschau enthält die ersten 5 Varianten, die in diesem Katalog zu OTTO Market exportiert werden.
+Nachdem du einen Katalog zum ersten Mal exportiert hast, kannst du eine Vorschau des Katalogs anzeigen lassen. Die Vorschau enthält die ersten 5 Varianten, die in diesem Katalog zu OTTO Market exportiert werden.
 
 [.instruction]
-Vorschau des Katalogs herunterladen:
+Vorschau des Katalogs anzeigen:
 
 . Öffne das Menü *Daten » Kataloge*.
 . Öffne den Katalog, für den du eine Vorschau ansehen möchtest.
 . Klicke auf *Vorschau* (icon:preview[set=material]). +
-→ Ein Fenster zum manuellen Download der Vorschaudatei wird geöffnet.
-. Klicke auf *Herunterladen* (icon:download[set=plenty, role="darkGrey"]). +
-→ Die Datei wird heruntergeladen. Sie enthält die ersten 5 Varianten des Exports.
+→ Ein Fenster mit der Vorschau des Katalogs wird geöffnet. Es enthält die ersten 5 Varianten des Exports. +
+*_Tipp:_* Du kannst die Vorschau auch herunterladen. Klicke dazu auf *Herunterladen* (icon:download[set=plenty, role="darkGrey"]).
+--
 
 [#1050]
 == Auftragsbearbeitung bei OTTO Market
