--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -331,7 +331,7 @@ Erstelle nun die Vorlage und speichere grundlegende Einstellungen wie den Namen,
 [TIP]
 .Zwischen mehreren Vorlagen hin- und herwechseln
 ====
-Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst du über die Navigation zwischen den einzelnen Vorlagen hin- und herwechseln. Mit einem Klick auf *Konfiguration* gelangst du wieder in den Ordnerbaum. Dort ist dann automatisch die Vorlage geöffnet, die du zuletzt geöffnet hattest.
+Wenn du später mehrere Vorlagen zur selben Zeit im Editor bearbeitest, kannst du über die Navigation auf der linken Seiten zwischen den einzelnen Vorlagen hin- und herwechseln. Mit einem Klick auf icon:account_tree[set=material] *Konfiguration* gelangst du wieder in den Ordnerbaum. Dort ist dann automatisch die Vorlage geöffnet, die du zuletzt geöffnet hattest. Schließe geöffnete Vorlagen mit einem Klick auf icon:close[set=material].
 ====
 
 [[image-emailbuilder-template]]
@@ -376,7 +376,7 @@ So sind deine E-Mails für alle Empfänger:innen lesbar, auch wenn deren E-Mail-
 *_Hinweis:_* Dieses Feld ist ein Pflichtfeld.
 
 2+^|[#intable-template-settings-content]*Inhalt*
-2+^| Klicke auf icon:edit[set=material], um den Inhalt der Vorlage zu bearbeiten und <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> einzufügen. +
+2+^|Klicke auf icon:edit[set=material], um den Inhalt der Vorlage zu bearbeiten und <<#widget-einfuegen, Widgets>> und <<#variablen-emailbuilder, Variablen>> einzufügen. +
 Der Editor-Bereich öffnet sich und du kannst über die Widgets den Inhalt der Vorlage bearbeiten. +
 Die E-Mail-Vorlagen verwenden das Multipart-Format. Die E-Mails werden also gleichzeitig in einer HTML- und in einer Textversion versendet.
 
@@ -403,7 +403,8 @@ Die Liste enthält alle <<#footer-erstellen, Footer>>, die du bereits erstellt h
 |In dieser Dropdown-Liste stehen dir alle xref:auftraege:auftragsdokumente.adoc#100[standortbezogenen Dokumente] zur Verfügung, die du im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente* eingerichtet hast. Wähle (icon:check_box[set=material, role=skyBlue]) bis zu 3 dynamische Anhänge aus der Dropdown-Liste.
 
 |[#intable-template-settings-subject]*Betreff*
-|Wie lautet der Betreff deiner E-Mail?
+|Wie lautet der Betreff deiner E-Mail? +
+*_Hinweis:_* Dieses Feld ist ein Pflichtfeld.
 
 //| *Von*
 //|Das ist der Absender der E-Mail, so wie er im plentymarkets System in den E-Mail-Einstellungen hinterlegt ist.
@@ -435,7 +436,7 @@ Die Liste enthält alle <<#footer-erstellen, Footer>>, die du bereits erstellt h
 *_Textrahmen:_* Gib z.B. `border: 1px solid blue;` in dieses Feld ein, um einen 1 px schmalen, blauen Rahmen um den Text einzufügen. +
 *_Innenabstand:_* Gib `padding:10px;` in dieses Feld ein, wenn der Abstand auf allen Seiten 10px betragen soll. Gib `padding: 10px 20px;` ein, wenn der Abstand oben und unten 10px und links und rechts 20px betragen soll. +
 *_Hinweis:_* Wenn du mehrere CSS-Stylings für die Vorlage speichern möchtest, gib alle Werte hintereinander, getrennt durch ein Semikolon ein. +
-*_Tipp:_* Verwende die *Vorschau HTML* (icon:preview[set=material]) im EmailBuilder, um deine Eingaben zu prüfen und ggf. weitere Anpassungen vorzunehmen.
+*_Tipp:_* Speichere die Einstellungen. Anschließend ist die Schaltfläche *Vorschau* (icon:preview[set=material]) sichtbar, mit der du deine Eingaben prüfen und ggf. weitere Anpassungen vornehmen kannst.
 
 |====
 
@@ -449,7 +450,19 @@ video::580718073[vimeo]
 [#widget-einfuegen]
 === Widget in Vorlage einfügen
 
-Im Editor findest du eine Auswahl an Widgets, deren Inhalte bereits teilweise für dich vorkonfiguriert sind. Beispielsweise findest du im Widget *Auftragspositionen* eine vordefinierte Liste mit den wichtigsten Variablen rund um den bestellten Artikel wie Artikelname, Anzahl der bestellten Menge, Preise, Versandkosten und Gesamtrechnungsbetrag. Du kannst die Inhalte jedoch jederzeit nach deinen Wünschen anpassen und weitere Spaltennamen und einzelne Positionen hinzufügen. <<#image-emailbuilder-widget-order-items>> zeigt den Bearbeitungsmodus des vordefinierten Widget *Auftragspositionen*.
+Im Editor findest du eine Auswahl an Widgets, deren Inhalte bereits teilweise für dich vorkonfiguriert sind. Die folgenden Widgets sind verfügbar:
+
+* <<#intable-widget-zweispaltiges-layout, Zweispaltiges Layout>>
+* <<#intable-widget-dreispaltiges-layout, Dreispaltiges Layout>>
+* <<#intable-widget-text, Text>>
+* <<#intable-widget-code, Code>>
+* <<#intable-widget-kontaktadresse, Kontaktadresse>>
+* <<#intable-widget-auftragsadresse, Auftragsadresse>>
+* <<#intable-widget-auftragspositionen, Auftragspositionen>> 
+* <<#intable-widget-artikelliste, Artikelliste>>
+* <<#intable-widget-bild, Bild>>
+
+Beispielsweise findest du im Widget *Auftragspositionen* eine vordefinierte Liste mit den wichtigsten Variablen rund um den bestellten Artikel wie Artikelname, Anzahl der bestellten Menge, Preise, Versandkosten und Gesamtrechnungsbetrag. Du kannst die Inhalte jedoch jederzeit nach deinen Wünschen anpassen und weitere Spaltennamen und einzelne Positionen hinzufügen. <<#image-emailbuilder-widget-order-items>> zeigt den Bearbeitungsmodus des vordefinierten Widgets *Auftragspositionen*.
 
 [[image-emailbuilder-widget-order-items]]
 .Bearbeitungsmodus des vordefinierten Widget *Auftragspositionen*
@@ -526,8 +539,9 @@ Mit einem Klick auf icon:edit[set=material] öffnet sich auf der linken Seite di
 Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Widget mit einem Klick auf *Widget löschen* (icon:delete[set=material]) entfernen. Weitere Einstellungen können hier nicht vorgenommen werden. Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstellungen zu schließen.
 
 |[#intable-widget-bild]*Bild*
-| In diesem Widget kannst du Bilder wie z.B. dein Firmenlogo hochladen, um dieses in deinen E-Mail-Vorlagen anzuzeigen. Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. +
-Hier kannst du das Bild hochladen, die Breite und die Höhe des Bildes in px oder % angeben, einen Alternativtext eingeben, das Styling im CSS-Format anpassen und den Bild-Link angeben. +
+| In diesem Widget kannst du Bilder wie z.B. dein Firmenlogo hochladen, um dieses in deinen E-Mail-Vorlagen anzuzeigen.
+
+Mit einem Klick auf icon:settings[set=material] öffnen sich die Einstellungen. Hier kannst du das Bild hochladen, die Breite und die Höhe des Bildes in px oder % angeben, einen Alternativtext eingeben, das Styling im CSS-Format anpassen und den Bild-Link angeben. +
 *_Hinweis:_* Gib bei dem Bild-Link immer `https` mit an. +
 *_Tipp:_* Wenn du das Bild an eine bestimmte Position setzen möchtest, kannst du das CSS-Styling im Feld *Eigenes Styling* anpassen, z.B. `margin-left: auto; margin-right: 0; display: block;` oder `float:right;display:block;`. Weitere Informationen findest du z.B. link:https://www.w3schools.com/css/css3_images.asp[hier^] und link:https://www.caniemail.com/[hier^].
 
@@ -535,7 +549,7 @@ Klicke auf *Einstellungen schließen* (icon:close[set=material]), um die Einstel
 
 |====
 
-Gehe wie im Folgenden beschrieben vor, um ein Widget in der Vorlage einzufügen.
+Jetzt hast du einen Überblick, welche Widgets du verwenden kannst. Gehe also nun wie im Folgenden beschrieben vor, um ein Widget oder mehrere Widgets in deiner Vorlage einzufügen.
 
 [.instruction]
 Widget in Vorlage einfügen:
@@ -546,14 +560,14 @@ Widget in Vorlage einfügen:
 . Klicke auf *Bearbeiten* (icon:edit[set=material]). +
 → Der Editor öffnet sich und die Widgets werden geladen.
 . Klicke auf das Widget auf der linken Seite, das du einbinden möchtest, und ziehe es via Drag-and-drop in den schraffierten Bereich.
-. Klicke auf icon:edit[set=material] bzw. auf icon:settings[set=material] und nimm die Einstellungen vor.
+. Klicke auf icon:edit[set=material] bzw. auf icon:settings[set=material] und nimm die Einstellungen vor. Beachte die Erläuterungen in <<#table-available-widgets-emailbuilder>>.
 . *Speichere* (icon:save[set=material]) die Einstellungen.
 
 [#widget-vorschau-anzeigen]
 [discrete]
 ==== Vorschau des Widgets anzeigen
 
-Prüfe den das Widget, indem du die Vorschau öffnest.
+Prüfe das Widget, indem du die Vorschau öffnest.
 
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klappe den Ordner auf (icon:chevron_right[set=material]), der die Vorlage enthält, von der du eine Vorschau anzeigen möchtest.
@@ -902,7 +916,7 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 
 [[table-variables-order-order]]
 .Variablen in der Kategorie *Auftrag*
-[cols="2,4,3"]
+[cols="2,5,2"]
 |====
 |Name der Variable |Erläuterung |Twig expression
 
@@ -1217,7 +1231,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 [[table-variables-order-order-items]]
 .Variablen in der Unterkategorie *Auftrag / Auftragspositionen (nur für Artikellisten-Widget)*
-[cols="2,4,3"]
+[cols="2,5,2"]
 |====
 |Name der Variable |Erläuterung |Twig expression
 
@@ -1965,11 +1979,8 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 
 |====
 
-
-
 [#variablen-newsletter]
 ==== Variablen Newsletter
-
 
 [[table-variables-newsletter]]
 .Variablen in der Kategorie *Newsletter*
@@ -1994,25 +2005,25 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 [#code-beispiele-code-widget]
 == Code-Beispiele für das Code-Widget
 
-Setze in deinen E-Mail-Vorlagen Fallunterscheidungen nach den Prinzipien der if-Abfragen ein. Im Folgenden findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
+Setze in deinen E-Mail-Vorlagen Fallunterscheidungen nach den Prinzipien der if-Abfragen ein. Im Folgenden findest du einige if-Abfragen, die du einfach in dein <<#intable-widget-code, Code-Widget>> kopieren kannst.
 
 [#code-beispiel-versandprofil]
 === Code-Beispiel: Versandprofil
 
-Füge einen Code ein, der bewirkt, dass ein Hinweis bezüglich der Spedition und Kontaktaufnahme in der E-Mail an deine Kund:innen nur angezeigt wird, wenn der Versanddienstleister im Versandprofil eine Spedition ist. In unserem Beispiel hat das Versandprofil mit der Spedition die ID `6`.
+Füge in das <<#intable-widget-code, Code-Widget>> einen Code ein, der bewirkt, dass ein Hinweis bezüglich der Spedition und Kontaktaufnahme in der E-Mail an deine Kund:innen nur angezeigt wird, wenn der Versanddienstleister im Versandprofil eine Spedition ist. In unserem Beispiel hat das Versandprofil mit der Spedition die ID `6`.
 
 Das Code-Beispiel findest du link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/crm/assets/emailbuilder-code-beispiel-versandprofil.txt[unter diesem Link^].
 
 [#code-beispiel-bankdaten]
 === Code-Beispiel: Bankdaten
 
-Füge einen Code ein, der bewirkt, dass deine Bankdaten in der E-Mail an deine Kund:innen nur angezeigt werden, wenn sie im plentyShop die Zahlungsart *Vorkasse* (ID `0`) gewählt haben.
+Füge in das <<#intable-widget-code, Code-Widget>> einen Code ein, der bewirkt, dass deine Bankdaten in der E-Mail an deine Kund:innen nur angezeigt werden, wenn sie im plentyShop die Zahlungsart *Vorkasse* (ID `0`) gewählt haben.
 
 Das Code-Beispiel findest du link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/crm/assets/emailbuilder-code-beispiel-bankdaten.txt[unter diesem Link^].
 
 [#code-beispiel-auftragspositionen]
 === Code-Beispiel: Auftragspositionen
 
-Füge einen Code ein, der bewirkt, dass die Auftragspositionen mit den Varianten-IDs, den Artikelnamen, der Artikelanzahl und dem Preis in einer Tabelle angezeigt werden.
+Füge in das <<#intable-widget-code, Code-Widget>> einen Code ein, der bewirkt, dass die Auftragspositionen mit den Varianten-IDs, den Artikelnamen, der Artikelanzahl und dem Preis in einer Tabelle angezeigt werden.
 
 Das Code-Beispiel findest du link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/crm/assets/emailbuilder-code-beispiel-auftragspositionen.txt[unter diesem Link^].
