update sammelaufträge text

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -59,12 +59,12 @@ Nach dem Auftragseingang werden alle Aufträge in einem Menü gesammelt und in e
 
 // TODO: Kontext
 |Wähle aus, welchen Typ von Warenkorb du in der Auftragserstellung nutzen möchtest. Standardmäßig ist der Side cart ausgewählt. Die Funktionen im Warenkorb sind bei beiden Typen gleich. +
-*Warenkorb als Side cart* = Der Warenkorb wird seitlich als Overlay dargestellt, wenn man ihn öffnet. +
+*Warenkorb als Side cart* = Der Warenkorb wird seitlich als neues Fenster dargestellt, wenn man ihn öffnet. +
 *Warenkorb als Tabelle (unterhalb der Suchergebnisse)* = Der Warenkorb wird als Tabelle unterhalb der Artikeltabelle (generiert durch die Artikelsuche) dargestellt.
 
 
 Folgende Auftragstypen gibt es in plentymarkets:
-// TODO: neue Seite auftragstypen-testphase.adoc
+// TODO: siehe Seite: auftragstypen-testphase.adoc
 
 
 [#creating-orders-in-plentymarkets]
@@ -142,15 +142,16 @@ Auftrag oder Angebot über Kontakt anlegen:
 . Öffne das Menü *CRM » Kontakte*.
 . Suche den Kontakt anhand der Filtereinstellungen wie im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
 → Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
-. Klicke in der Zeile des Kontaktes auf *Aktionen* (icon:bars[]). +
-→ Eine Auswahl der verfügbaren Optionen wird geöffnet.
+. Klicke in der Zeile des Kontaktes rechts auf icon:more_vert[set=material], um das Kontextmenü zu öffnen. +
+→ Die Auswahl der verfügbaren Optionen wird geöffnet.
+. Wähle Warenkorb Icon *Aufträge*, um das Kontextmenü für *Aufträge* zu öffnen.
 . Wähle entweder *Neuer Auftrag [Beta]* oder *Neues Angebot [Beta]*. +
 → Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. des neuen Angebotes weitergeleitet. +
 // TODO: alle xref prüfen/anpassen
 
-Über den Auftragsdetails kannst du aus Dropdown-Liste auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] aus der Dropdown-Liste auswählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
+Über Auftragsdetails kannst du aus der Dropdown-Auswahl auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] aus der Dropdown-Liste auswählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
 
-Die im Folgenden beschriebenen Schritte sind für Auftrag und Angebot gleich.
+Die oben beschriebenen Schritte sind für Auftrag und Angebot gleich.
 // TODO: siehe angebot.adoc
 
 Die Ansichten der neuen Benutzeroberfläche sind so gestaltet, dass sich Aufträge schnell und übersichtlich anlegen lassen. Dies ist vor allem bei der telefonischen Aufnahme von Bestellungen von Vorteil. Zunächst werden die Auftragsdetails wie z.B. Adressen oder die Zahlungsart abgefragt. Danach werden dem Auftrag Artikel hinzugefügt, um ihn im letzten Schritt zu überprüfen und anzulegen.
@@ -331,10 +332,17 @@ Die Zahl im grauen Kreis gibt an, wie oft du das Element verwenden kannst.
 Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach hinzugefügt werden.
 ======
 
-// TODO: struktur
+// TODO: struktur und richtiger Text
 Portlets
 siehe Detailansicht Gestaltung bei Artikel
 Auf der neuen Aufträge UI sind die Informationen in Portlets aufgeteilt.
+Oberhalb der Portlets werden neben Dashboard links weitere Tabs angezeigt, z.B. *Aufträge*, *Einrichtung*, *Kontakte*, und man kann schnell von einem zum anderen wechseln.
+
+Dashboard
+Über icon:more_vert[set=material] öffnet sich das KontextmenÜ:
+Icon Neu laden
+Icon Im Handbuch nachschlagen - das Handbuch öffnet sich
+Icon Andere Tabs schließen - alle anderen Tabs werden geschlossen
 
 [#individual-portlets]
 === Eigene Portlets
@@ -426,7 +434,8 @@ Auswahl bei Tags:
 
 
 [#portlet-adress]
-Im Portlet *Adressen* siehst du...
+Im Portlet *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadresse.
+Über icon:more_vert[set=material] öffnet sich jeweils das Kontextmenü.
 
 | *Rechnung*
 |Rechnungsadresse mit Land und ID (VAT fehlt)
@@ -434,9 +443,8 @@ Im Portlet *Adressen* siehst du...
 | *Lieferung* 
 |Lieferadresse mit Land und ID (VAT fehlt)
 
-// tODO: Über die 3 Punkte rechts öffnet sich Bearbeiten
-
-// TODO: Verweis auf?
+Im Kontextmenü kannst du folgende Informationen sehen oder eingeben.
+// TODO: wie richtig darstellen?
 Adressangaben
 Anrede
 Firma (Name 1)
@@ -458,8 +466,9 @@ Telefon
 Typ: Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
 eingeben und speichern
 
+
 [#portlet-general]
-Im Portlet *Allgemein* siehst du...
+Im Portlet *Allgemein* siehst du einen Überblick über deinen Auftrag.
 
 | *Zahlungsart*
 |Wähle die gewünschte Zahlungsart aus der Dropdown-Liste. +
@@ -490,13 +499,28 @@ Die Standardeinstellung für Währung ist Euro (EUR).
 | *Paketnummern*
 |Gib eine Paketnummer ein. +
 Durch Klick auf auf das Symbol icon öffnet sich das Versandcenter.
-Oben 4 Symbole
-Auftrag anmelden
-Polling
-Retoure anmelden
-Auftrag zurücksetzen
+// TODO: 4 Symbole beschreiben
+*Auftrag anmelden*
+*Polling*
+*Retoure anmelden*
+*Auftrag zurücksetzen*
+
 // TODO: abgleichen mit Versandcenter 2.0
-4 Portlets: Übersicht, Empfänger, Pakete, Retouren
+4 Portlets links in der Seitennavigation: 
+*Übersicht*
+Empfänger
+Pakete, darunter
+ID, Bezeichnung, Gewichtt, Maße, Volumen, Anzahl der Artikel, Typ, Paketnummer, Erstellt:, Geändert:
+Über blau hinterlegt Bestätigen
+
+*Retouren*
+ID
+Retouren-ID
+Retourendienstleister
+Angemeldet am 
+Gültig bis
+Paketnummer
+Über blau hinterlegt Bestätigen
 
 | *Herkunft*
 |Wähle die Herkunft über die Dropdown-Liste. +
@@ -831,29 +855,30 @@ Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen:
 |Einstellung|Erläuterung
 
 |[#intable-standard-eigner]*Standard-Eigner*
-|Wählst du einen Standard-Eigner, ist dieser in den Auftragsdetails des neuen Auftrags oder Angebots standardmäßig vorausgewählt. Der Eigner wird generell nicht aus den Kontaktdaten übernommen.
+|Wählst du einen Standard-Eigner, ist dieser in den Auftragsdetails des neuen Auftrags oder Angebots standardmäßig vorausgewählt. Der Eigner wird nicht aus den Kontaktdaten übernommen.
 
 |[#intable-standard-mandant]*Standard-Mandant*
-|Der hier ausgewählte Standard-Mandant ist beim Anlegen des neuen Auftrags oder Angebots vorausgewählt, wenn in den Kontaktdaten kein Mandant hinterlegt ist. Ist in den Kontaktdaten ein Mandant hinterlegt, hat dieser Priorität.
+|Der gewählte Standard-Mandant ist beim Anlegen des neuen Auftrags oder Angebots vorausgewählt, wenn in den Kontaktdaten kein Mandant hinterlegt ist. Ist in den Kontaktdaten ein Mandant hinterlegt, hat dieser Priorität.
 
 |[#intable-standard-herkunft]*Standard-Herkunft*
-|Die hier ausgewählte Standard-Herkunft ist beim Anlegen des neuen Auftrags oder Angebots vorausgewählt, wenn in den Kontaktdaten keine Herkunft hinterlegt ist. Ist in den Kontaktdaten eine Herkunft hinterlegt, hat dieser Priorität.
+|Die gewählte Standard-Herkunft ist beim Anlegen des neuen Auftrags oder Angebots vorausgewählt, wenn in den Kontaktdaten keine Herkunft hinterlegt ist. Ist in den Kontaktdaten eine Herkunft hinterlegt, hat diese Priorität.
 
 // TODO: alle xref prüfen/anpassen
 |[#intable-standard-vorlage]*Standard-Auftragsvorlage*
-|Wählst du eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] als Standard-Auftragsvorlage, ist diese für den neuen Auftrag oder das Angebot standardmäßig vorausgewählt. Die Werte der ausgewählten Auftragsvorlage werden dann automatisch für den Auftrag oder das Angebot übernommen. Es können nur bereits angelegte Auftragsvorlagen ausgewählt werden. +
+|Wählst du eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] als Standard-Auftragsvorlage, ist diese für den neuen Auftrag oder das Angebot standardmäßig vorausgewählt. Die Werte der gewählten Auftragsvorlage werden automatisch für den Auftrag oder das Angebot übernommen. Es können nur bereits angelegte Auftragsvorlagen gewählt werden. +
 Standardmäßig ist *Keine Auftragsvorlage vorausgewählt* gesetzt. Wählst du eine Auftragsvorlage als Standard aus und wird diese zu irgendeinem Zeitpunkt gelöscht, wird als Standard für diese Einstellung wieder *Keine* gesetzt.
 
 |[#intable-endpoint-after-completion]*Endpunkt nach Abschluss eines Auftrags*
 |Wähle aus, wohin im System du nach Abschließen eines Auftrages geleitet werden möchtest. Du kannst wählen zwischen: +
 *Auftragsübersicht des Kontaktes* = Leitet dich zur Auftragsübersicht im Kontaktdatensatz des Kontakts des gerade erstellten Auftrags. Dies ist die Standardeinstellung. +
 *Auftragsübersicht* = Leitet dich zur allgemeinen Auftragsübersicht weiter. +
-*Detailansicht des neuen Auftrags* = Leitet dich zur Detailansicht des gerade erstellten Auftrags.
+*Detailansicht des neuen Auftrags* = Leitet dich zur Detailansicht des gerade erstellten Auftrags weiter.
 
 |[#intable-shopping-cart-type]*Verwendeter Warenkorbtyp in der Auftragserstellung*
-|Wähle aus, welchen Typ von Warenkorb du in der Auftragserstellung nutzen möchtest. Standardmäßig ist der Side cart ausgewählt. Die Funktionen im Warenkorb sind bei beiden Typen gleich. +
-*Warenkorb als Side cart* = Der Warenkorb wird seitlich als Overlay dargestellt, wenn man ihn öffnet. +
+|Wähle aus, welchen Typ von Warenkorb du in der Auftragserstellung nutzen möchtest. Standardmäßig ist der *Side cart* ausgewählt. Die Funktionen im Warenkorb sind bei beiden Typen gleich. +
+*Warenkorb als Side cart* = Der Warenkorb wird seitlich als Fenster dargestellt, wenn man ihn öffnet. +
 *Warenkorb als Tabelle (unterhalb der Suchergebnisse)* = Der Warenkorb wird als Tabelle unterhalb der Artikeltabelle (generiert durch die Artikelsuche) dargestellt.
+// TODO: side cart
 
 |*Filteroption ‚Nur vorrätige Artikel anzeigen‘ in der Artikelsuche vorausgewählt*
 |Aktiviere diese Option, damit sie für die Artikelsuche vorausgewählt ist. Angezeigt werden in den Suchergebnissen dann nur Artikel, die einen physischen Warenbestand haben.
@@ -1667,8 +1692,8 @@ Beachte, dass nur die Funktionen angezeigt werden, die auf diesen Auftrag angewe
 .Einzelfunktion für Auftrag nutzen:
 
 . Suche den Auftrag, den du bearbeiten möchtest.
-. Klicke auf das Kontextmenü (icon:more_vert[set=material]) am Ende der Zeile. +
-→ Dadurch öffnet sich ein Overlay mit den für den Auftrag verfügbaren Funktionen.
+. Klicke auf das Kontextmenü (icon:more_vert[set=material]) rechts am Ende der Zeile. +
+→ Dadurch öffnet sich ein Fenster mit den für den Auftrag verfügbaren Funktionen.
 . Wähle die Funktion aus, die du auf den Auftrag anwenden möchtest.
 
 
@@ -2084,8 +2109,12 @@ Cart
 
 
 ==Auftragstyp Sammelauftrag
+// TODO: erklären lassen
+Einrichtung - Aufträge - Auftragstypen - Multi-Order
+
 
 ==Auftragstyp Vorbestellung
+// TODO: erklären lassen
 
 
 Aufträge verwalten (alte UI)
@@ -2103,4 +2132,43 @@ Neu dazu: Nettopreis bearbeiten
 Bei dem Bearbeiten von Positionen im Auftrag kann man in der neuen UI nicht nur den Bruttopreis bearbeiten, sondern auch den Nettopreis. Der Stift Bearbeiten ist für Nettopreis dazu gekommen. 
 Bei Standardeinstellung wird der 
 Der manuelle Preis 
- ////
+////
+
+Widget Artikel zurückbuchen
+// TODO: in Entwicklung, erklären lassen
+ Neuer Eintrag in der Seitennavigation = Book back items 
+(Sales Order & Warranty: Only visible if a outgoing item is set, 
+Return: always visible)
+
+
+2+^| *Artikel*
+
+| *Auftragsmenge* (display field)
+|Die *Auftragsmenge* wird angezeigt.
+
+| *Offene Menge* (display field)
+|Die *Offene Menge* wird angezeigt.
+
+batch (display field)
+bbd (display field)
+
+| *Artikel-ID* (display field)
+|Die *Artikel-ID* wird angezeigt.
+
+| *Varianten-ID* (display field)
+|Die *Varianten-ID* wird angezeigt.
+
+| *Variantenname* (display field)
+|Die *Variantenname* wird angezeigt.
+
+2+^| *Warenkorb*
+
+reverse (validation reverse cant be higher than "quantity in order" - "Open"
+warehouse (single select)
+storage location (see purchase order transactions)
+quantity in order (display field)
+batch (display field)
+bbd (display field)
+Item Id (display field)
+variantion id (display field)
+Variationname (display field)
