add entry for new page

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -91,6 +91,7 @@
 *** xref:warenwirtschaft:artikel-verraeumen.adoc[Artikel verräumen]
 *** xref:warenwirtschaft:inventur-durchfuehren.adoc[Inventur durchführen]
 *** xref:warenwirtschaft:mobile-picklisten.adoc[Mit Picklisten arbeiten]
+*** xref:warenwirtschaft:rollende-kommissionierung.adoc[Rollende Kommissionierung]
 *** xref:warenwirtschaft:etiketten-drucken.adoc[Etiketten drucken]
 * xref:crm:crm.adoc[CRM]
 ** xref:crm:kontakte.adoc[Kontakte]
