ADD my view editing mode includes
...and rename myview search includes (prefix: myview-)

--- a/docs/de-de/modules/_includes/pages/myview-search-apply-filter.adoc
+++ b/docs/de-de/modules/_includes/pages/myview-search-apply-filter.adoc
@@ -1,6 +1,6 @@
 ////
 Infos zur Datei:
-Titel: Gespeicherte Filter anwenden (je nach Ebene der Überschrift selbst einfügen)
+Kapitelüberschrift "Gespeicherte Filter anwenden" verwenden (je nach Ebene der Überschrift selbst einfügen)
 ////
 
 Gehe wie im Folgenden vor, um einen gespeicherten Filter in der Suche anzuwenden.
