--- a/docs/de-de/modules/_includes/pages/myview-search-introduction.adoc
+++ b/docs/de-de/modules/_includes/pages/myview-search-introduction.adoc
@@ -1,7 +1,8 @@
 ////
+Hinweise zur Datei:
 Die Tabelle mit den Filtern ist nicht in dieser include-Datei enthalten. Diese muss manuell hinzugefügt werden.
 
-Beispiel für _:search-for-certain-singular:_ eine bestimmte Firma / einen bestimmten Artikel
+Beispiel für ":search-for-certain-singular:": eine bestimmte Firma / einen bestimmten Artikel
 ////
 
 :menu-path:
