--- a/docs/en-gb/modules/_includes/pages/myview-search-introduction.adoc
+++ b/docs/en-gb/modules/_includes/pages/myview-search-introduction.adoc
@@ -1,7 +1,7 @@
 ////
 Die Tabelle mit den Filtern ist nicht in dieser include-Datei enthalten. Diese muss manuell hinzugefügt werden.
 
-Example for _:search-for-certain-singular:_ a certain company / a specific item
+Example for ":search-for-certain-singular:": a certain company / a specific item
 ////
 
 :menu-path:
@@ -11,7 +11,7 @@ Example for _:search-for-certain-singular:_ a certain company / a specific item
 :value:
 :table-filter:
 
-In order to search for {search-for-certain-singular} enter the search terms in the filters. You can enter multiple search terms into the search fields at once. This makes your search run quicker and more accurate.
+In order to search for {search-for-certain-singular}, enter the search terms in the filters. You can enter multiple search terms into the search fields at once. This makes your search run quicker and more accurate.
 
 [.instruction]
 Search for {search-for-singular}:
