--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -65,22 +65,25 @@ Du möchtest am Partnerprogramm von Zalando teilnehmen? Dann link:https://www.za
 
 Du hast einen Vertrag mit Zalando abgeschlossen. Super. Wie geht es jetzt weiter?
 
-Hier siehst du eine Übersicht der Schritte, die dich erwarten. Jeder dieser Schritte ist auf dieser Handbuchseite beschrieben.
+Hier siehst du eine Übersicht der Schritte, die dich erwarten.
 
-* Nimm die Grundeinstellungen im Menü *Einrichtung » Märkte » Zalando » Einstellungen* vor.
-* Fordere im plentymarkets Forum das CSV-Formular zum Abgleichen von Artikeln/Silhouetten an.
-* Trage deine Benutzerdaten in die CSV-Datei ein.
-* Leite das ausgefüllte Formular an deine:n Zalando-Ansprechpartner:in weiter.
-* Durchlaufe den Assistenten *Kontoeinstellungen - Zalando* zum ersten Mal. +
+. <<#setup, Nimm die Grundeinstellungen im Menü *Einrichtung » Märkte » Zalando » Einstellungen* vor.>>
+. <<#zalando-csv-form, Fordere im plentymarkets Forum das CSV-Formular zum Abgleichen von Artikeln/Silhouetten an.>>
+  ** Trage deine Benutzerdaten in die CSV-Datei ein.
+  ** Leite das ausgefüllte Formular an deine:n Zalando-Ansprechpartner:in weiter.
+. <<#1400, Durchlaufe den Assistenten *Kontoeinstellungen - Zalando* zum ersten Mal.>> +
 *_Wichtig:_* Beim ersten Durchlauf kannst du nicht alle Einstellungen des Assistenten vornehmen.
-* Bitte unseren Support, dein Konto mit deinem zDirect-Konto zu verknüpfen. +
+. <<#link-zDirect, Bitte unseren Support, dein Konto mit deinem zDirect-Konto zu verknüpfen.>> +
 *_Wichtig:_* Das geht erst, nachdem du den Assistenten zum ersten Mal durchlaufen hast.
-* Durchlaufe den Assistenten *Kontoeinstellungen - Zalando* noch einmal, um die fehlenden Einstellungen vorzunehmen.
-* Nimm alle weiteren Einstellungen vor, die auf dieser Seite beschrieben sind.
-* Alles passt und es kann losgehen? Dann aktiviere dein Zalando-Konto im Assistenten, um den Datenaustausch mit Zalando zu starten.
+. <<#assistant-2, Durchlaufe den Assistenten *Kontoeinstellungen - Zalando* noch einmal, um die fehlenden Einstellungen vorzunehmen.>>
+. <<#more-setup, Nimm die weiteren Einstellungen vor.>>
+. <<#order-documents, Bereite die Auftragsdokumente vor.>>
+. <<#prepare-variations, Bereite deine Varianten vor.>>
+. <<#1200-1, Automatisiere die Auftragsabwicklung.>>
+. <<#1500, Dann aktiviere dein Zalando-Konto im Assistenten, um den Datenaustausch mit Zalando zu starten.>>
 
 [#setup]
-== Zalando in plentymarkets einrichten
+== Konto- und Ländereinstellungen vornehmen
 
 Nachdem Zalando dich als Partner:in in das Programm aufgenommen hat, stellt dir Zalando ein Handbuch und Hilfestellung beim Einrichten der Schnittstelle zur Verfügung. In plentymarkets nimmst du die hier beschriebenen Einstellungen vor.
 
@@ -355,6 +358,9 @@ Definiere bis zu drei geplante Preise. Geplante Preise geben dir mehr Sicherheit
 Du hast die Einrichtung noch nicht abgeschlossen. Aktiviere das Zalando-Konto deshalb noch nicht.
 --
 
+[#more-setup]
+== Weitere Einstellungen vornehmen
+
 [#400]
 === Kategorien verknüpfen
 
@@ -433,7 +439,7 @@ Silhouetten in Merkmale konvertieren:
 . Öffne das Menü *Einrichtung » Märkte » Zalando » Einstellungen*.
 . Wechsele in das Tab *Silhouetten*.
 . Wähle die *Gruppen* für die Merkmale, die du konvertieren möchtest. +
-*_Hinweis:_* Werden keine Gruppen angezeigt? Dann hat Zalando entweder noch keine Silhouetten bereitgestellt oder du hast Zalando noch keine FTP-Zugangsdaten zukommen lassen (siehe <<#150, Schritte nach der Registrierung>>).
+*_Hinweis:_* Werden keine Gruppen angezeigt? Dann hat Zalando entweder noch keine Silhouetten bereitgestellt oder du hast Zalando noch keine FTP-Zugangsdaten zukommen lassen (siehe <<#zalando-csv-form, CSV-Formular zum Abgleichen von Artikeln/Silhouetten anfordern>>).
 . Speichere (icon:save[set=plenty]) die Einstellungen. +
 → Aus den Silhouetten werden Merkmale im plentymarkets System erstellt.
 
@@ -614,7 +620,7 @@ include::partial$zalando-order-documents.adoc[]
 [#1200-1]
 == Auftragsabwicklung automatisieren
 
-Für die automatische Auftragsabwicklung über zDirect stehen die folgenden Ereignisaktionen zur Verfügung:
+Für die automatische Auftragsabwicklung stehen die folgenden Ereignisaktionen zur Verfügung:
 
 * Versandbestätigungen automatisch senden (<<#1200, Wie?>>)
 * Stornierungen automatisch senden (<<#1300, Wie?>>)
@@ -1074,3 +1080,16 @@ Nutze optional die in <<#tabelle-referenztypen>> aufgeführten Filter, um die Su
 == FAQ
 
 include::partial$zalando-faq.adoc[]
+
+[#add-countries]
+== Weiteres Land hinzufügen
+
+Du verkaufst schon auf Zalando, möchtest deine Produkte jetzt aber auf einer weiteren Länderplattform anbieten? Kein Problem.
+
+Sobald du mit Zalando einen Vertrag über den zusätzlichen Verkaufskanal abgeschlossen hast, geht es so weiter:
+
+* Du forderst im Forum link::https://forum.plentymarkets.com/t/sammelthema-collective-thread-csv-formular-zum-abgleichen-von-artikeln-silhouetten-csv-form-for-synchronization-of-articles-silhouettes/669460[die API-Route für den neuen Verkaufskanal an.] +
+*_Wichtig:_* Benutzer und Kennwort sind für alle Zalando-Verkaufskanäle gleich. Zalando benötigt also nur die API-Route.
+* Du sendest dein:er Zalando-Ansprechpartner:in die neue API-Route mit der Zusatzinformation, dass alle anderen Daten vom ersten Verkaufskanal übernommen werden sollen. +
+→ Zalando schaltet den neuen Verkaufskanal frei.
+* <<#assistant-2, Durchlaufe den Assistenten, um das Land zu aktivieren und die Einstellungen für Preise und Bestände zu speichern.>>
