--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -67,6 +67,7 @@ Du hast einen Vertrag mit Zalando abgeschlossen. Super. Wie geht es jetzt weiter
 
 Hier siehst du eine Übersicht der Schritte, die dich erwarten.
 
+. <<#api-user, Erstelle einen REST-API-Zugang>>.
 . <<#setup, Nimm die Grundeinstellungen im Menü *Einrichtung » Märkte » Zalando » Einstellungen* vor.>>
 . <<#zalando-csv-form, Fordere im plentymarkets Forum das CSV-Formular zum Abgleichen von Artikeln/Silhouetten an.>>
   ** Trage deine Benutzerdaten in die CSV-Datei ein.
@@ -86,6 +87,26 @@ Hier siehst du eine Übersicht der Schritte, die dich erwarten.
 == Konto- und Ländereinstellungen vornehmen
 
 Nachdem Zalando dich als Partner:in in das Programm aufgenommen hat, stellt dir Zalando ein Handbuch und Hilfestellung beim Einrichten der Schnittstelle zur Verfügung. In plentymarkets nimmst du die hier beschriebenen Einstellungen vor.
+
+[#api-user]
+=== REST-API-Zugang erstellen
+
+Erstelle nun einen REST-API-Zugang.
+
+[.instruction]
+REST-API-Zugang erstellen:
+
+. Öffne das Menü *Einrichtung » Einstellungen » Benutzer » Konten*.
+. Klicke auf *Neu*. +
+→ Das Fenster *Neuen Benutzer anlegen* wird geöffnet.
+. Gib einen *Benutzernamen* ein.
+. Gib in das Feld *realen Namen* ein.
+. Gib ein *Passwort* ein.
+. Wiederhole das Passwort.
+. Wähle für die Einstellung *Zugang* die Option *REST-API*.
+. *Speichere* die Einstellungen. +
+→ Das Konto wird erstellt. +
+*_Tipp:_* Für das Konto müssen keine Rechte freigegeben werden. Es reicht, dass das Konto im System existiert.
 
 [#setup]
 === Grundeinstellungen vornehmen
@@ -107,7 +128,7 @@ Grundeinstellungen vornehmen:
 2+^|Grundkonfiguration
 
 | *Benutzer*
-| API-Benutzerkonto wählen. Das API-Benutzerkonto wird bei der Ersteinrichtung deines plentymarkets Systems erstellt.
+| Das API-Konto wählen, das du <<#api-user, für Zalando erstellt hast>>.
 
 | *Artikelname*
 | *Name 1*, *Name 2* oder *Name 3* wählen. Der gewählte Name wird zu Zalando exportiert.
