--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -13,7 +13,7 @@ Durch das Zalando-Partnerprogramm können Online-Händler:innen und Hersteller:i
 //tag::zalando-countries[]
 In welchen Ländern du über Zalando verkaufen kannst, hängt von deinem Vertrag mit Zalando ab. Zurzeit können Aufträge aus den folgenden Ländern in plentymarkets importiert werden:
 
-*_Wichtig:_* Im Moment ist mit plentymarkets nur der Eigenversand durch Händler:innen möglich. Zalando nennt das Partner Fulfillment (own logistics). Der Versand durch Zalando, also Zalando Fulfillment Solutions (ZFS), wird noch nicht unterstützt.
+*_Wichtig:_* Mit plentymarkets ist nur Eigenversand durch Händler:innen möglich. Zalando nennt das *Partner Fulfillment (own logistics)*. Der Versand durch Zalando, also Zalando Fulfillment Solutions (ZFS), wird noch nicht unterstützt.
 
 * Deutschland
 * Belgien
