Added legacy orders option

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -65,6 +65,11 @@ a| * *Yes* = Activate the interface to Kaufland.de. Data is exchanged with Kaufl
 
 2+^| Order settings
 
+| *Use configuration for legacy orders*
+| This setting is *activated* by default for your previous Kaufland account. This is to make sure that old orders which were generated on Kaufland before the link:https://forum.plentymarkets.com/t/mehrere-konten-fuer-kaufland-einrichten-set-up-several-accounts-for-kaufland/681351[update^] can be properly processed in your plentymarkets system. +
+Your previous Kaufland account is listed in the *Setup » Markets » Kaufland.de » Settings » Tab: Accounts* menu. +
+This setting is not relevant for new Kaufland accounts which can be added in the *New account* tab. The setting is therefore *deactivated* by default in a new configuration.
+
 | *Book incoming payment*
 |This setting applies to the order import. Orders are imported either as paid or not paid. Regardless of this setting, items will immediately be cleared for shipping when they have sufficient stock. With the option *open*, you could also set the order to paid when the actual incoming payment from Kaufland.de is received. In this way, Kaufland.de can be tested.
 
