--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -66,10 +66,9 @@ a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. Daten werden mit Kaufland a
 2+^| Auftragseinstellungen
 
 | *Konfiguration für alte Aufträge verwenden*
-| *_Hinweis:_* Diese Einstellung ist nur nach der Umstellung relevant, mit der mehrere Konten für Kaufland eingerichtet werden können. +
-Diese Option ist für das erste Konto automatisch aktiviert. So ist sichergestellt, dass Aufträge, die vor der Umstellung auf Kaufland generiert wurden, in deinem plentymarkets System verarbeitet werden können. +
-Mit dieser Einstellung werden alle Einstellungen deines Kaufland-Kontos auf das erste neue Konto übertragen. Das bedeutet, dass nach der Umstellung auf mehrere Konten automatisch ein Konto mit deinen alten Einstellungen erstellt wird. +
-Wenn du eine Konfiguration für ein neues Konto erstellst, ist standardmäßig *Nein* eingestellt.
+| Diese Einstellung ist für dein bisheriges Kaufland-Konto standardmäßig *aktiviert*. Damit wird sichergestellt, dass alte Aufträge, die vor dem link:https://forum.plentymarkets.com/t/mehrere-konten-fuer-kaufland-einrichten-set-up-several-accounts-for-kaufland/681351[Update^] auf Kaufland generiert wurden, in deinem plentymarkets System verarbeitet werden können. +
+Dein bisheriges Kaufland-Konto findest du unter *Einrichtung » Märkte » Kaufland.de » Einstellungen » Tab: Konten*. +
+Für neue Kaufland-Konten, die du im *Tab: Neues Konto* hinzufügst, ist diese Einstellung nicht relevant und deshalb in einer neuen Konfiguration standardmäßig *deaktiviert*.
 
 | *Zahlungseingang buchen*
 | Diese Einstellung greift für den Auftragsimport. Aufträge werden als bezahlt oder nicht bezahlt importiert. Unabhängig von dieser Einstellung werden Artikel bei ausreichend Bestand sofort für den Versand freigegeben. Mit der Option *offen* könntest du bei tatsächlichem Zahlungseingang von Kaufland.de den Auftrag auf bezahlt setzen und somit eine Kontrolle von Kaufland.de durchführen.
